--- a/index.html
+++ b/index.html
@@ -1,21 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Vector Field</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <script language="javascript" src="app.js"></script>
-        <script language="javascript" src="p5.min.js"></script>
-    </head>
-    <body>
-    <div class="hi">
-        <h1>hello.</h1>
 
-        <p>
-            
-        </p>
-    </div>
+<head>
+	<title>Hello!</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
+	<link href="css/style.css" rel="stylesheet">
+	<script language="javascript" src="app.js"></script>
+	<script language="javascript" src="p5.min.js"></script>
+	<link rel="shortcut icon" type="image/png" href="favicon-32x32.ico" sizes="32x32">
+	<link rel="shortcut icon" type="image/png" href="favicon-16x16.ico" sizes="16x16">
+</head>
 
-    </body>
+<body>
+	<div class="hi">
+		<h1>Hello 👋</h1>
+
+		<p>My name is Yashar.</p>
+		<p>Check out some of my ongoing projects:</p>
+		<div class="links">
+			<a href="http://54.190.35.210/">WikiChain 🌐</a>
+			<p>
+				<span>⌙</span> An exercise in recursion to create a thread of related articles.
+			</p>
+
+			<a href="http://istheparkingbanon.ca/">Is The Parking Ban On? ⛔️</a>
+			<p>
+				<span>⌙</span> Single-serving website to quickly check if the parking ban is on!
+			</p>
+
+
+			<a href="http://34.209.128.105">Metro Transit Visualizer 🚌</a>
+			<p>
+				<span>⌙</span> Visualizing Halifax Metro Transit in real time with Realtime-GTFS to identify traffic hotspots
+				for better city planning.
+			</p>
+		</div>
+		<br>
+		<br>
+		<a href="mailto:yasharasheri@icloud.com?subject=Hello!">
+			<italic>Let's work together!</italic> 📬
+			<span id="tooltip-span1">
+				<img src="magic.gif" style="width: 150px;" />
+			</span>
+		</a>
+	</div>
+
+</body>
+
 </html>
