--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 			<a href="http://istheparkingbanon.ca/">Is The Parking Ban On? ⛔️</a>
 			<p>
-				<span>⌙</span> Single-serving website to quickly check if the parking ban is on!
+				<span>⌙</span> Single-serving site to quickly check if the parking ban is on!
 			</p>
 
 
@@ -42,7 +42,7 @@
 		<a href="mailto:yasharasheri@icloud.com?subject=Hello!">
 			<italic>Let's work together!</italic> 📬
 			<span id="tooltip-span1">
-				<img src="magic.gif" style="width: 150px;" />
+				<img src="magic.gif" style="width: 120px;" />
 			</span>
 		</a>
 	</div>
