--- a/public/index.html
+++ b/public/index.html
@@ -22,19 +22,18 @@
 		<div class="links">
 			<a href="http://54.190.35.210/">WikiChain 🌐</a>
 			<p>
-				<span>⌙</span> An exercise in recursion to create a thread of related articles.
+				<span>⌙</span> An exercise in recursion to create a random chain of articles, related by their last word.
 			</p>
-
-			<a href="http://istheparkingbanon.ca/">Is The Parking Ban On? ⛔️</a>
-			<p>
-				<span>⌙</span> Single-serving site to quickly check if the parking ban is on!
-			</p>
-
 
 			<a href="http://34.209.128.105">Metro Transit Visualizer 🚌</a>
 			<p>
 				<span>⌙</span> Visualizing Halifax Metro Transit in real time with Realtime-GTFS to identify traffic hotspots
 				for better city planning.
+			</p>
+			
+			<a href="http://istheparkingbanon.ca/">Is The Parking Ban On? ⛔️</a>
+			<p>
+				<span>⌙</span> Single-serving site to quickly check if the parking ban is on!
 			</p>
 		</div>
 		<br>
