--- a/public/index.html
+++ b/public/index.html
@@ -17,24 +17,50 @@
 	<div class="hi">
 		<h1>Hello 👋</h1>
 
-		<p>My name is Yashar.</p>
+		<h3>My name is Yashar!</h3>
 		<p>Check out some of my ongoing projects:</p>
 		<div class="links">
-			<a href="http://54.190.35.210/">WikiChain 🌐</a>
-			<p>
-				<span>⌙</span> An exercise in recursion to create a random chain of articles, related by their last word.
-			</p>
+			<div class="item">
+				<a href="http://54.190.35.210/" target="_blank">WikiChain 🌐</a>
+				<p>
+					<span>⌙</span> An exercise in recursion to create a random chain of articles, related by their last word.
+				</p>
+				<ul>
+					<li>node.js</li>
+					<li>express.js</li>
+					<li>react.js</li>
+					<li>wikijs</li>
+				</ul>
+			</div>
 
-			<a href="http://34.209.128.105">Metro Transit Visualizer 🚌</a>
-			<p>
-				<span>⌙</span> Visualizing Halifax Metro Transit in real time with Realtime-GTFS to identify traffic hotspots
-				for better city planning.
-			</p>
+			<div class="item">
+				<a href="http://34.209.128.105" target="_blank">Metro Transit Visualizer 🚌</a>
+				<p>
+					<span>⌙</span> Visualizing Halifax Metro Transit in real time with Realtime-GTFS to identify traffic hotspots
+					for better city planning.
+				</p>
+				<ul>
+					<li>node.js</li>
+					<li>express.js</li>
+					<li>d3</li>
+					<li>protobuf</li>
+					<li>google maps</li>
+				</ul>
+			</div>
 			
-			<a href="http://istheparkingbanon.ca/">Is The Parking Ban On? ⛔️</a>
-			<p>
-				<span>⌙</span> Single-serving site to quickly check if the parking ban is on!
-			</p>
+			<div class="item">
+				<a href="http://istheparkingbanon.ca/" target="_blank">Is The Parking Ban On? ⛔️</a>
+				<p>
+					<span>⌙</span> Single-serving site to quickly check if the parking ban is on!
+				</p>
+				<ul>
+					<li>node.js</li>
+					<li>express.js</li>
+					<li>ejs</li>
+					<li>request</li>
+					<li>cheerio</li>
+				</ul>
+			</div>
 		</div>
 		<br>
 		<br>
