added class to email link

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		<br>
-		<a href="mailto:yasharasheri@icloud.com?subject=Hello!">
+		<a class="work" href="mailto:yasharasheri@icloud.com?subject=Hello!">
 			<italic>Let's work together!</italic> 📬
 			<span id="tooltip-span1">
 				<img src="magic.gif" style="width: 120px;" />
