--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 		<p>Check out some of my ongoing projects:</p>
 		<div class="links">
 			<div class="item">
-				<a href="http://54.190.35.210/" target="_blank">WikiChain 🌐</a>
+				<a href="http://ec2-52-33-128-121.us-west-2.compute.amazonaws.com" target="_blank">WikiChain 🌐</a>
 				<p>
 					<span>⌙</span> An exercise in recursion to create a random chain of articles, related by their last word.
 				</p>
@@ -34,7 +34,7 @@
 			</div>
 
 			<div class="item">
-				<a href="http://34.209.128.105" target="_blank">Metro Transit Visualizer 🚌</a>
+				<a href="http://ec2-34-220-77-177.us-west-2.compute.amazonaws.com" target="_blank">Metro Transit Visualizer 🚌</a>
 				<p>
 					<span>⌙</span> Visualizing Halifax Metro Transit in real time with Realtime-GTFS to identify traffic hotspots
 					for better city planning.
@@ -49,7 +49,7 @@
 			</div>
 			
 			<div class="item">
-				<a href="http://istheparkingbanon.ca/" target="_blank">Is The Parking Ban On? ⛔️</a>
+				<a href="http://ec2-54-190-198-106.us-west-2.compute.amazonaws.com/" target="_blank">Is The Parking Ban On? ⛔️</a>
 				<p>
 					<span>⌙</span> Single-serving site to quickly check if the parking ban is on!
 				</p>
